tests/lean/t3.lean.expected.out
Type u
Type tst.v
Type tst.v
Type tst.v
t3.lean:9:16: error: unknown universe 'v'
Type z
t3.lean:14:16: error: unknown universe 'z'
t3.lean:16:2: error: invalid namespace declaration, a namespace cannot be declared inside a section
Type tst.v
Type u
Type tst.foo.U
Type tst.v
Type tst.foo.U
t3.lean:33:2: error: universe level alias 'u' shadows existing global universe level
t3.lean:35:16: error: unknown universe 'bla.u'
